# napari-orientation

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml
src/: pyproject.toml
src/napari_orientation/: napari.yaml  orientation_field_widget.py
src/napari_orientation/_tests/: test_algorithms.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
